--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -15,3 +15,36 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.scrollbar {
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 0.25rem;
+    background: var(--theme-label-tertiary);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: var(--theme-label-primary);
+  }
+
+  &::-webkit-scrollbar-thumb:active {
+    background: var(--theme-label-primary);
+  }
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
+}
