--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @import './variables.css';
 
 @import 'tailwindcss/base';
+@import 'balloon-css';
 @import './base.css';
 
 @import 'tailwindcss/components';
