feat: add settings panel
The new settings panel allows changing the following:
* Theme
* Density of feed
* Open links in the same tab or new tab
* Hide read articles

--- a/styles/feed.module.css
+++ b/styles/feed.module.css
@@ -13,26 +13,62 @@
   @screen tablet {
     --num-cards: 2;
     grid-auto-rows: 22.75rem;
+
+    &:global(.cozy) {
+      --num-cards: 1;
+    }
   }
 
   @screen laptop {
     --num-cards: 3;
+
+    &:global(.cozy), &:global(.roomy) {
+      --num-cards: 2;
+    }
   }
 
   @screen laptopL {
     --num-cards: 4;
+
+    &:global(.cozy), &:global(.roomy) {
+      --num-cards: 3;
+    }
   }
 
   @screen laptopXL {
     --num-cards: 5;
+
+    &:global(.roomy) {
+      --num-cards: 4;
+    }
+
+    &:global(.cozy) {
+      --num-cards: 3;
+    }
   }
 
   @screen desktop {
     --num-cards: 6;
+
+    &:global(.roomy) {
+      --num-cards: 5;
+    }
+
+    &:global(.cozy) {
+      --num-cards: 4;
+    }
   }
 
   @screen desktopL {
     --num-cards: 7;
+
+    &:global(.roomy) {
+      --num-cards: 6;
+    }
+
+    &:global(.cozy) {
+      --num-cards: 5;
+    }
   }
 }
 
