--- a/styles/cards.module.css
+++ b/styles/cards.module.css
@@ -59,7 +59,7 @@
   transition: transform 0.1s linear, z-index 0.1s step-end;
 }
 
-.header > a, .header > .button {
+.header > a, .header > button {
   margin: 0 0.375rem;
 }
 
