feat: add dropdown to choose time period in upvoted page

--- a/styles/components/buttons.css
+++ b/styles/components/buttons.css
@@ -1,5 +1,6 @@
 .btn {
-  padding: 0.5625rem 1.4375rem;
+  height: 2.5rem;
+  padding: 0 1.4375rem;
   border-radius: 0.75rem;
   background: var(--button-background, var(--button-default-background, none));
   border-color: var(--button-border-color, var(--button-default-border-color, transparent));
@@ -13,12 +14,14 @@
   }
 
   &.small {
-    padding: 0.3125rem 0.9375rem;
+    height: 2rem;
+    padding: 0 0.9375rem;
     border-radius: 0.625rem;
   }
 
   &.large {
-    padding: 0.8125rem 1.9375rem;
+    height: 3rem;
+    padding: 0 1.9375rem;
     border-radius: 0.875rem;
   }
 
@@ -39,23 +42,28 @@
   }
 
   &.iconOnly {
-    padding: 0.3125rem;
+    width: 2.5rem;
+    padding: 0;
     border-radius: 0.75rem;
 
     &.small {
-      padding: 0.1875rem;
+      width: 2rem;
+      padding: 0;
       border-radius: 0.625rem;
       font-size: 1.5rem;
     }
 
     &.large {
-      padding: 0.4375rem;
+      width: 3rem;
+      padding: 0;
       border-radius: 0.875rem;
       font-size: 2rem;
     }
 
     &.xlarge {
-      padding: 0.6875rem;
+      width: 4rem;
+      height: 4rem;
+      padding: 0;
       border-radius: 1.375rem;
       font-size: 2.5rem;
     }
