fix: rank attention animation for the rank button

--- a/packages/webapp/styles/headerRankProgress.module.css
+++ b/packages/webapp/styles/headerRankProgress.module.css
@@ -14,8 +14,11 @@
       border-radius: 100%;
       z-index: -1;
       transition: background 0.1s linear;
-      animation: rank-attention 2s infinite ease-in-out;
       will-change: opacity, transform, background;
+
+      &:global {
+        animation: rank-attention 2s infinite ease-in-out;
+      }
     }
 
     &:hover {
