feat: add main feeds page to the extension

--- a/packages/extension/views/newtab.html
+++ b/packages/extension/views/newtab.html
@@ -4,8 +4,10 @@
   <meta charset='UTF-8' />
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width,initial-scale=1.0'>
-  <link rel='icon' href='/assets/icons/action_32.png'>
+  <link rel='icon' href='/icons/action_32.png'>
   <title>New Tab</title>
+  <link rel="preconnect" href="https://res.cloudinary.com" />
+  <link rel="preconnect" href="https://api.daily.dev" />
 </head>
 <body>
 <noscript>
