fix: feed max width in mobile screens

--- a/packages/shared/src/components/Feed.module.css
+++ b/packages/shared/src/components/Feed.module.css
@@ -3,7 +3,9 @@
 }
 
 .cards {
-  max-width: calc(20rem * var(--num-cards) + var(--feed-gap) * (var(--num-cards) - 1));
+  @screen mobileL {
+    max-width: calc(20rem * var(--num-cards) + var(--feed-gap) * (var(--num-cards) - 1));
+  }
 }
 
 .feedRow {
