refactor: use css scrolling for the scroll to top button

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -1,6 +1,7 @@
 html {
   background: var(--theme-background-primary);
   color: var(--theme-label-primary);
+  scroll-behavior: smooth;
 }
 
 :root {
