Add css in base.css

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -232,3 +232,25 @@ img.lazyload:not([src]) {
     opacity: 0;
   }
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0.25rem;
+  background: var(--theme-label-tertiary);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--theme-label-primary);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: var(--theme-label-primary);
+}
