--- a/packages/webapp/pages/posts/postPage.module.css
+++ b/packages/webapp/pages/posts/postPage.module.css
@@ -62,7 +62,7 @@
 @media not all and (min-resolution:.001dpcm)
 { @supports (-webkit-appearance:none) {
   @media screen and (max-width:375px){
-    .discussion_bar { 
+    .discussionBar { 
       margin-bottom: 1.5rem;
     }
   } 
