--- a/packages/webapp/pages/posts/postPage.module.css
+++ b/packages/webapp/pages/posts/postPage.module.css
@@ -58,3 +58,12 @@
     @apply typo-body;
   }
 }
+
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+  @media screen and (max-width: 375px){
+    .discussionBar{
+      margin-bottom: 3rem;
+    }
+  }
+}}
