--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -290,3 +290,9 @@ img.lazyload:not([src]) {
 ::-webkit-scrollbar-thumb:active {
   background: var(--theme-label-primary);
 }
+
+.non-responsive-header ~ .page {
+  @screen laptop {
+    min-height: calc(100vh - $navBarHeight);
+  }
+}
