--- a/packages/shared/src/components/fields/TextField.module.css
+++ b/packages/shared/src/components/fields/TextField.module.css
@@ -13,3 +13,9 @@
     border-color: var(--theme-status-error);
   }
 }
+
+.field input[type='number']::-webkit-inner-spin-button,
+.field input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
