feat: dnd customization modal (#604)
Closes dailydotdev/daily#103

Co-authored-by: Ido Shamun <ido@daily.dev>

--- a/packages/shared/src/components/fields/TextField.module.css
+++ b/packages/shared/src/components/fields/TextField.module.css
@@ -13,3 +13,8 @@
     border-color: var(--theme-status-error);
   }
 }
+
+.field input[type='number']::-webkit-inner-spin-button,
+.field input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
