feat: add blocked tags feed filter
The new filter blocks tags from the feed. In addition, the user experience of the sidebar and feed page has changed to behave has expected
Closes dailydotdev/daily#296
Closes dailydotdev/daily#84

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -296,3 +296,24 @@ img.lazyload:not([src]) {
     min-height: calc(100vh - $navBarHeight);
   }
 }
+
+summary {
+  list-style: none;
+
+  &::-webkit-details-marker {
+    display: none;
+  }
+}
+
+details {
+  & .arrow {
+    transform: rotate(180deg);
+    transition: transform 0.1s linear;
+  }
+
+  &[open] {
+    & .arrow {
+      transform: rotate(0deg);
+    }
+  }
+}
