feat: :sparkles: New filter experience
WIP: Test + analytics

--- a/packages/shared/src/components/filters/common.module.css
+++ b/packages/shared/src/components/filters/common.module.css
@@ -1,5 +1,12 @@
 .details {
   &[open] {
-    padding-bottom: 2rem;
+    &.icon {
+      --tw-rotate: 180deg;
+    }
+  }
+  &[open] {
+    & .icon {
+      transform: rotate(180deg);
+    }
   }
 }
