--- a/packages/shared/src/styles/components/buttons.css
+++ b/packages/shared/src/styles/components/buttons.css
@@ -198,3 +198,23 @@
     }
   }
 }
+.btn-tag {
+  color: var(--button-color, var(--button-default-color));
+  & .icon {
+    color: var(--button-icon, var(--button-default-icon, none));
+  }
+
+  &[aria-pressed="true"] {
+    --button-background: var(--button-pressed-background);
+    --button-icon: var(--button-hover-icon);
+  }
+
+  &:hover, &.hover, &:focus:focus-visible {
+    --button-icon: var(--button-hover-icon);
+  }
+
+  &:active {
+    --button-background: var(--button-pressed-background);
+    --button-icon: var(--button-hover-icon);
+  }
+}
