--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -55,6 +55,8 @@ body {
   --theme-label-link: theme('colors.water.20');
   --theme-label-invert: theme('colors.pepper.90');
   --theme-label-bun: theme('colors.bun.20');
+  --theme-label-success: theme('colors.avocado.40');
+  --theme-label-warning: theme('colors.bun.40');
 
   --theme-divider-primary: theme('colors.salt.90');
   --theme-divider-secondary: theme('colors.salt.90')66;
@@ -117,6 +119,8 @@ body {
   --theme-label-link: theme('colors.water.80');
   --theme-label-invert: #ffffff;
   --theme-label-bun: theme('colors.bun.80');
+  --theme-label-success: theme('colors.avocado.60');
+  --theme-label-warning: theme('colors.bun.60');
 
   --theme-divider-primary: theme('colors.pepper.10');
   --theme-divider-secondary: theme('colors.pepper.10')66;
