--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -64,6 +64,7 @@ body {
   --theme-status-error: theme('colors.ketchup.40');
   --theme-status-help: theme('colors.cheese.40');
   --theme-status-success: theme('colors.avocado.40');
+  --theme-status-warning: theme('colors.bun.40');
 
   --theme-shadow2: theme('boxShadow.2-black');
   --theme-shadow3: theme('boxShadow.3-black');
@@ -126,6 +127,7 @@ body {
   --theme-status-error: theme('colors.ketchup.60');
   --theme-status-help: theme('colors.cheese.60');
   --theme-status-success: theme('colors.avocado.60');
+  --theme-status-warning: theme('colors.bun.60');
 
   --theme-shadow2: theme('boxShadow.2-salt');
   --theme-shadow3: theme('boxShadow.3-salt');
