feat: loader overlay component - introduce in devcard

--- a/packages/shared/src/components/Loader.module.css
+++ b/packages/shared/src/components/Loader.module.css
@@ -27,6 +27,16 @@
   }
 }
 
+.inner.invert {
+  &:before {
+    border-top-color: var(--theme-label-invert);
+  }
+
+  &:after {
+    border-color: var(--theme-label-invert);
+  }
+}
+
 .inner,
 .inner:before,
 .inner:after {
