fix: disable body scrolling when modal is open

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -32,6 +32,11 @@ body {
       }
     }
   }
+
+  &.ReactModal__Body--open {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
 
 @define-mixin dark-mode {
