refactor: :recycle: Move report modal code to it's own file

--- a/packages/shared/src/components/modals/ReportModal.module.css
+++ b/packages/shared/src/components/modals/ReportModal.module.css
@@ -1,4 +1,4 @@
-.confirmationModal {
+.reportModal {
   & :global(.overlay) {
     justify-content: center;
     padding-left: 1.5rem;
@@ -7,7 +7,7 @@
 
   & :global(.modal) {
     max-width: 23.25rem;
-    padding: 1.5rem 2.5rem;
+    padding: 2rem;
   }
 }
 
