fix: body scrolling when modal is open should be disabled (#661)
DD-218 #done

This restricts scroll chaining by using overscroll-behavior to none. This also prevents the jump effect when the bottom part has been reached and it won't allow scrolling of the outside through the inside element.

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -32,6 +32,12 @@ body {
       }
     }
   }
+
+  &.ReactModal__Body--open .ReactModal__Content,
+  &.ReactModal__Body--open .ReactModal__Content > * {
+    touch-action: none;
+    overscroll-behavior-y: none;
+  }
 }
 
 @define-mixin dark-mode {
